Bug 516605 - HDMI external display goes on and off on its own
Summary: HDMI external display goes on and off on its own
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.6.0
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: multiscreen, regression
Depends on:
Blocks:
 
Reported: 2026-02-23 17:22 UTC by kde
Modified: 2026-03-14 13:56 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.3
Sentry Crash Report:


Attachments
video (3.00 MB, video/mp4)
2026-02-23 17:22 UTC, kde
Details
kwinoutputconfig (14.06 KB, application/json)
2026-03-06 18:14 UTC, kde
Details
wayland-session (78.29 KB, text/x-log)
2026-03-06 18:14 UTC, kde
Details
sddm (161.23 KB, text/x-log)
2026-03-06 18:14 UTC, kde
Details
Xorg.0 (58.37 KB, text/x-log)
2026-03-06 18:15 UTC, kde
Details
drm-debug1 (259.00 KB, text/x-log)
2026-03-06 23:23 UTC, kde
Details
drm-debug2 (1.07 MB, application/gzip)
2026-03-06 23:24 UTC, kde
Details
kde_bug_ddc-ci (180.78 KB, image/png)
2026-03-10 15:11 UTC, kde
Details
edid.bin (256 bytes, application/octet-stream)
2026-03-11 13:54 UTC, kde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kde 2026-02-23 17:22:24 UTC
Created attachment 190017 [details]
video

SUMMARY
I've been using KDE Plasma in Artix (dinit) on my AMD laptop (igpu radeon 880m) with an external hdmi display always plugged in and the lid closed. Since the last plasma update 6.6 my hdmi display goes on and off on its own regardless if I keep the lid open or closed. My power management settings are set to stay always awake and to never turn the display off when an external monitor is connected.
No issue whatsoever if I unplug the external display from the hdmi port and use the "internal" one only. Also before plasma 6.6.0 it worked flawless as expected. Please see attached video.
Thanks a lot

STEPS TO REPRODUCE
1. connect an hdmi display to a laptop

OBSERVED RESULT
External display connected via hdmi goes on and off on its own, regardless if the notebook lid is closed or open

EXPECTED RESULT
Display stays on, regardless if the notebook lid is closed or open

SOFTWARE/OS VERSIONS
KDE Plasma Version:  6.6.0
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Comment 1 Zamundaaa 2026-03-06 16:09:24 UTC
From the video, it looks as though the external monitor is disconnecting temporarily... maybe the connection isn't fully stable and the driver is resetting it in an attempt to fix things, but I'm really not sure.

Please attach ~/.config/kwinoutputconfig.json and the output of
> journalctl --user-unit plasma-kwin_wayland --boot 0
after the display turns off and on at least once
Comment 2 kde 2026-03-06 18:13:04 UTC
(In reply to Zamundaaa from comment #1)
> From the video, it looks as though the external monitor is disconnecting
> temporarily... maybe the connection isn't fully stable and the driver is
> resetting it in an attempt to fix things, but I'm really not sure.
> 
> Please attach ~/.config/kwinoutputconfig.json and the output of
> > journalctl --user-unit plasma-kwin_wayland --boot 0
> after the display turns off and on at least once

Thank you very much for taking the time to look at this.
I'm not sure it's the HDMI connection because this doesn't happen with windows I have on the other half of the partition. Also, it didn't happen to Artix either prior to the Plasma 6.6.0 update.
I don't use systemctl unfortunately, I can't provide you with the journalctl output. However I did find some other log files which hopefully might be useful.
Comment 3 kde 2026-03-06 18:14:14 UTC
Created attachment 190425 [details]
kwinoutputconfig
Comment 4 kde 2026-03-06 18:14:32 UTC
Created attachment 190426 [details]
wayland-session
Comment 5 kde 2026-03-06 18:14:48 UTC
Created attachment 190427 [details]
sddm
Comment 6 kde 2026-03-06 18:15:01 UTC
Created attachment 190428 [details]
Xorg.0
Comment 7 Zamundaaa 2026-03-06 19:33:02 UTC
Ok, so the config looks alright - with the external screen connected, no matter if the lid is closed or not, the external monitor is on and the internal screen is off.

In your logs, there's a lot of
> Atomic modeset test failed! Invalid argument
+ then warnings from apps about there being no screens. Those warnings *could* be from the screen being disconnected, but it's a bit difficult to say.

I think we need drm debug logs from this to know more: https://invent.kde.org/plasma/kwin/-/wikis/Debugging/Debugging-DRM-issues
Comment 8 kde 2026-03-06 23:23:07 UTC
There you go. I produced 2 different drm-debug logs. Not sure if they differ somehow. Hope that helps understand the issue!
Comment 9 kde 2026-03-06 23:23:29 UTC
Created attachment 190434 [details]
drm-debug1
Comment 10 kde 2026-03-06 23:24:23 UTC
Created attachment 190435 [details]
drm-debug2
Comment 11 kde 2026-03-10 15:10:52 UTC
Hi! I hope I've found what triggers this bug. In the display settings, there's a checkbox that enables controlling the hardware brightness with DDC/CI. When the bug was occurring, it was checked. I've unchecked it now and it's finally stopped causing this issue. I've attached a screenshot.
Comment 12 kde 2026-03-10 15:11:30 UTC
Created attachment 190531 [details]
kde_bug_ddc-ci
Comment 13 Zamundaaa 2026-03-11 13:38:04 UTC
Good find! It's pretty rare (we have a whole total of one display blacklisted in KWin so far), but some displays do have problems with DDC/CI.

The safest thing to do here is to just prevent the option from being enabled with your display model. Please attach the edid of your display, you can get it with
> cat /sys/class/drm/card1/card1-DP-1/edid > edid.bin
(the connector name might need adjusting)
and I'll add it to KWin's list of workarounds.
Comment 14 kde 2026-03-11 13:54:25 UTC
Thanks Zamundaaa. Please see attachment. If you need anything else, please let me know.
Comment 15 kde 2026-03-11 13:54:53 UTC
Created attachment 190575 [details]
edid.bin
Comment 16 Bug Janitor Service 2026-03-11 14:06:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8962
Comment 17 Zamundaaa 2026-03-11 15:06:17 UTC
Git commit 3e888b54f964a00a4774338083627810068517d1 by Xaver Hugl.
Committed on 11/03/2026 at 14:04.
Pushed by zamundaaa into branch 'master'.

core/backendoutput: disable DDC/CI for the Samsung LS24D60xU

It causes the display to temporarily disconnect in a loop.

M  +1    -0    src/core/backendoutput.cpp

https://invent.kde.org/plasma/kwin/-/commit/3e888b54f964a00a4774338083627810068517d1
Comment 18 Zamundaaa 2026-03-11 21:16:08 UTC
Git commit 8e64c65ae06ba83fb01627eccf8b66be7555dd41 by Xaver Hugl.
Committed on 11/03/2026 at 20:38.
Pushed by zamundaaa into branch 'Plasma/6.6'.

core/backendoutput: disable DDC/CI for the Samsung LS24D60xU

It causes the display to temporarily disconnect in a loop.


(cherry picked from commit 3e888b54f964a00a4774338083627810068517d1)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +1    -0    src/core/backendoutput.cpp

https://invent.kde.org/plasma/kwin/-/commit/8e64c65ae06ba83fb01627eccf8b66be7555dd41
Comment 19 Konstantin Kharlamov 2026-03-14 13:56:50 UTC
(In reply to kde from comment #0)
> OBSERVED RESULT
> External display connected via hdmi goes on and off on its own, regardless
> if the notebook lid is closed or open

Is this HDMI-only, or is that reproducible on other connectors as well…?

The reason I'm asking is the commit disables DDC/CI for this monitor model completely. However, my experience with "Philips 221V8" (combined with a laptop with NVidia proprietary driver) shows that sometimes HDMI specifically is just bad. I had multitude of minor issues via HDMI with that monitor¹, all of which are gone after switching to "Type-C ↔ DVI" connection.

1: link to the comment: https://www.reddit.com/r/buildapc/comments/8wdizg/comment/o3dt4ch/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button