core/backendoutput: disable DDC/CI for the Samsung LS24D60xU

It causes the display to temporarily disconnect in a loop.

BUG: 516605